2003-06-18  Mark Page  <mpagenva@aol.com>

	* nsthread/thread.c (Ns_ThreadCreate): Fix typo in Ns_ThreadCreate
	that was causing it to ignore the stacksize parameter.

	* nsd/init.tcl (_ns_eval): Fix ns_eval to prevent it's bleeding of
	unintended Tcl environment change to the global interp state.

2003-06-06  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/queue.c: fixed "connsperthread" config parameter
	as reported in bug item #749801. Default is set to
	"0" i.e. thread will perform unlimited number of
	connections (never exit) unless it's idle timer
	(if configured) expires. 

2003-05-31  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/config.c: uses Ns_TclDestroyInterp instead of the
	Tcl_DeleteInterp.

	* nsthread/nsthreadtest.c:
	* nsd/info.c:
	* nsd/nsmain.c:
	* include/Makefile.module.in:
	* configure:
	* configure.in: added --disable-shared so we can now build the
	nsd image statically.
 
2003-05-31  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/cache.c:
	* include/ns.h:
	* doc/Ns_Cache.3: added C-API for Ns_CacheTryLock as in RFE #725704
	
2003-05-30  Mark Page <mpagenva@aol.com>

	* nsd/tclthread.c: fix problem in ns_thread begindetached api.
        This code was failing to create the new thread as detached.
        Also corrected for the Ns_TclDetachedThread C api.  As a
        result of this change, non-detached threads will return their
        TclEval result to Ns_ThreadExit, making it available to a
        thread join.

2003-05-28  Mark Page  <mpagenva@aol.com>

	* TAG aolserver_v4_r0_beta_8
	
2003-05-28  Mark Page <mpagenva@aol.com>

	* nsd/tclimg.c: Use binary channel to read img (Thanks to Dossy).
        Eliminate double error string; Corrrect compiler warning on Seek.
        * tcl/form.c: Fix to ns_querygetall to suppress null sublists.  Also,
        make the defaulting semantics work as described.

2003-05-24  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/info.c: added workaround for Tcl_GetMemoryInfo() which